# da-story-edit

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
src/da_story_edit/: __init__.py  cli.py  config.py  da_api.py  gallery.py  http_client.py  navigation.py  options.py
tests/: test_cli.py  test_config.py  test_da_api.py  test_gallery.py  test_navigation.py  test_options.py
